syntax = "proto3";

package pb;
option go_package = "github.com/dvasilas/proteus/pkg/proteus-go-client/pb";

import "google/protobuf/timestamp.proto";

service QPUAPI {
  rpc QueryUnary(QueryReq) returns (QueryResp) {}
}

message QueryReq {
  string queryStr = 1;
}

message QueryResp {
  repeated QueryRespRecord respRecord = 1;
}

message QueryRespRecord {
  string record_id = 1;
  map<string, string> attributes = 2;
  map<string, google.protobuf.Timestamp> timestamp = 3;
}